2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Work w/ "integer" instead of "exact".

	* gi.h (EXACTP): Delete #define/macro.
	(ASSERT_EXACT): Delete macro.
	(ASSERT_INTEGER): New macro.
	(VALIDATE_NNINT_MORE_COPY) [!GI_LEVEL_NOT_YET_1_8]: New macro.
	(VALIDATE_NNINT_COPY, VALIDATE_NNINT_RANGE_COPY)
	[GI_LEVEL_NOT_YET_1_8]: Rename from
	‘ASSERT_EXACT_NON_NEGATIVE_COPY’ and
	‘VALIDATE_EXACT_0_UP_TO_N_COPY’, respectively.
	(VALIDATE_NNINT_COPY, VALIDATE_NNINT_RANGE_COPY)
	[GI_LEVEL_NOT_YET_1_8]: Likewise and also rewrite.
	(pg_lo_seek, pg_mblen): Use ‘ASSERT_INTEGER’.
	(pg_lo_read, VALIDATE_FIELD_NUMBER_COPY, pg_getvalue)
	(pg_getlength, pg_getisnull): Update.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Use "snuggle/humdrum.h".

	* gi.h: #include "snuggle/humdrum.h".
	(BOOLEANP, NULLP, PAIRP, STRINGP, SYMBOLP, PROCEDUREP)
	(BOOLEAN, NUM_INT, NUM_ULONG, SYMBOL, STRING, BSTRING)
	(C_INT, VECTOR_LEN, VECTOR_REF, EQ, CONS, CAR, CDR)
	(EVAL_STRING, APPLY, LISTIFY): Delete.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Use scm_set_c[ad]r_x directly.

	* libpq.c (pg_get_copy_data): Use ‘scm_set_car_x’.
	(pg_mblen): Use ‘scm_set_cdr_x’.
	* gi.h (SETCAR, SETCDR): Delete #define:s.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Rename macro ‘VREF’ to ‘VECTOR_REF’.

	* gi.h: ...here.
	* libpq.c (prep_paramspecs): Update.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Use "snuggle/finangle.h".

	* libpq.c: #include "snuggle/finangle.h".
	(range_t): Delete struct.
	(RS, RLEN, FINANGLABLE_SCHEME_STRING_FROM_SYMBOL, ROZT_X)
	(_FINANGLE, UNFINANGLE, REND, NUL_AT_END_X): Delete macros.
	(_finangle) [!GI_LEVEL_NOT_YET_1_8]: Delete static func.
	(FINANGLE_RAW, FINANGLE): Delete macros.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Use "snuggle/level.h".

	* gi.h: #include "snuggle/level.h".
	(GI_LEVEL): Delete #define.
	(GI_LEVEL_NOT_YET_1_8): Rewrite.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
